--- a/Thanks.html
+++ b/Thanks.html
@@ -120,7 +120,7 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Your response has been received and means the world to me.</p>
-        <a href="index.html" class="home-btn">Back to Proposal</a>
+        <!-- <a href="index.html" class="home-btn">Back to Proposal</a> -->
     </div>
 
     <script>
