--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="hearts" id="hearts"></div>
     <div class="container">
         <h1>Will You Be My Girlfriend?</h1>
-        <p>I've been thinking about this for a while, and I can't imagine my life without you in it. You make every day brighter just by being you.</p>
+        <p>I've been thinking about you, and I want you to be part of my life. Let's make every day brighter for us by being together.</p>
         
         <div class="buttons">
             <button id="yesBtn">Yes! ❤️</button>
@@ -233,7 +233,7 @@
         </div>
         
         <div id="thinkingMessage" class="response-message hidden">
-            <p>I appreciate you taking the time to think about it. Take all the time you need, and know that my feelings are genuine.</p>
+            <p>I'll assume this as a "YES".. lol.. Call me, if you clicked this</p>
         </div>
     </div>
 
